fix(settings): fix big amount of spacing in small screens

--- a/frontend/src/features/settings/components/Settings.module.css
+++ b/frontend/src/features/settings/components/Settings.module.css
@@ -8,7 +8,14 @@
 .settingsContent {
     max-width: 1200px;
     margin: 0 auto;
-    padding: var(--space-xl);
+    padding-left: 0;
+    padding-right: 0;
+}
+
+@media (min-width: 455px) {
+    .settingsContent {
+        padding: var(--space-xl);
+    }
 }
 
 /* === SETTINGS ITEMS === */
